# TankBusters

./: .gitignore  CMakeLists.txt  README.md  asteroid.c  asteroid.h  game.c  hello  run
infra/ansible/: .gitignore  download-from-releases-and-setup-server.yaml  install-and-setup-server.yaml  vars.example.yaml
infra/ansible/inventory/: servers.example.yaml
infra/ansible/tasks/: configure-services.yaml  setup-build.yaml  setup-notify-failed.yaml
infra/ansible/templates/: failure-notification.service.j2  notify.sh  tankbusters.service.j2
infra/terraform/: 0-locals.tf  3-vpc.tf  4-addr.tf  5-firewalls.tf  6-compute.tf
resources/: server.json  server_1.json
resources/other_servers/: server-localhost.json
src/: asteroid.hpp  constants.hpp  game.hpp  main.cpp
src/client/: game.cpp  graphicsManager.cpp  graphicsManager.hpp  main.cpp  networking.cpp  networking.hpp  roomManager.cpp  roomManager.hpp
src/common/: asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  colorjson.cpp  colorjson.hpp  constants.hpp  game.hpp  gameManager.cpp  gameManager.hpp  gameStatus.hpp  jsonutils.cpp  jsonutils.hpp  lobbyManager.cpp  lobbyManager.hpp  lockingQueue.hpp  networkEvents.cpp  networkEvents.hpp  player.cpp  player.hpp  room.cpp  room.hpp  spaceJunkCollector.cpp  spaceJunkCollector.hpp  vec2json.cpp  vec2json.hpp
src/server/: client.cpp  client.hpp  main.cpp  networkUtils.cpp  networkUtils.hpp  networked.hpp  room.cpp  room.hpp  server.cpp  server.hpp
